# zhanghealth

./: .env.example  .gitignore  .gitmodules  DESIGN.md  Dockerfile  Makefile  README.md  admin_auth.py  app.py  cli.py  config.py  data_encryption.py  docker-compose.yml  foundation_bridge.py  health_tracker.py  medication_manager.py  messages.py  models.py  pyproject.toml  requirements.txt  sender.py  trend_analyzer.py
.github/ISSUE_TEMPLATE/: agent_feedback.md  bug_report.md  config.yml  feature_request.md
data/: users.json.example
tests/: test_core.py  test_security.py
