[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zhanghealth"
version = "0.1.0"
description = "Family health monitoring via SMS — medication reminders, health tracking"
readme = "README.md"
license = "LicenseRef-Proprietary"
requires-python = ">=3.10"
authors = [
    { name = "Alfred Zhang", email = "junweizhang23@gmail.com" },
]

dependencies = [
    "flask==3.1.0",
    "twilio==9.4.0",
    "apscheduler==3.10.4",
    "pytz==2024.2",
    "gunicorn==23.0.0",
    "python-dotenv==1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
]

[project.urls]
Repository = "https://github.com/junweizhang23/zhanghealth"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "S", "SIM"]
ignore = ["S101", "S105"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S105", "S106"]
